# Page-Analyzer

./: .dockerignore  .env.example  .gitignore  1.py  Dockerfile  Makefile  README.md  database.sql  docker-compose.production.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
page_analyzer/: app.py  consts.py  database.py  exceptions.py  manager.py  sql.py  utils.py
page_analyzer/templates/: detail.html  index.html  urls.html
page_analyzer/templates/errors/: 404.html  500.html
page_analyzer/templates/includes/: footer.html  header.html
page_analyzer/templates/layouts/: base.html
